--- a/AUTOCAREHUB/angular.json
+++ b/AUTOCAREHUB/angular.json
@@ -24,6 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/img",
+                "output": "/img"
               }
             ],
             "styles": [
@@ -82,6 +87,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/img",
+                "output": "/img"
               }
             ],
             "styles": [
